tooling/lsp-server/examples/errors/unknown_escape.strl
# Error Example: Unknown Escape Sequence
# Expected: Error at line 4, character 0
# Message: "Unknown escape sequence \z"

\z